[gd_scene load_steps=3 format=3 uid="uid://bfk8y56dnkuy3"]

[ext_resource type="Script" uid="uid://dfufvpha8mysr" path="res://scripts/ui/MainMenu.gd" id="1_safe"]
[ext_resource type="PackedScene" uid="uid://bq1raeacacaca" path="res://scenes/ui/MusicPlayer.tscn" id="2_music"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_safe")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="BlueOverlay" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.2, 0.4, 0.6)

[node name="MusicPlayer" parent="Background" instance=ExtResource("2_music")]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 410.0
offset_bottom = 70.0
grow_horizontal = 0
grow_vertical = 0

[node name="MainContainer" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleArea" type="VBoxContainer" parent="Background/MainContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="GameTitle" type="Label" parent="Background/MainContainer/TitleArea"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 48
text = "Honor Of Kings"
horizontal_alignment = 1

[node name="ContentArea" type="HBoxContainer" parent="Background/MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CardPreviewArea" type="Panel" parent="Background/MainContainer/ContentArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="CardPreviewBackground" type="ColorRect" parent="Background/MainContainer/ContentArea/CardPreviewArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.15, 0.3, 0.7)

[node name="CardPreviewTitle" type="Label" parent="Background/MainContainer/ContentArea/CardPreviewArea"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -5.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.7, 0.85, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Âç°ÁâåÈ¢ÑËßà - Ëá™Âä®ËΩÆÊí≠"
horizontal_alignment = 1

[node name="MenuButtonsArea" type="VBoxContainer" parent="Background/MainContainer/ContentArea"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MenuButtons" type="VBoxContainer" parent="Background/MainContainer/ContentArea/MenuButtonsArea"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="StartGameButton" type="Button" parent="Background/MainContainer/ContentArea/MenuButtonsArea/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.3, 0.9, 1, 1)
theme_override_colors/font_pressed_color = Color(0.2, 0.7, 0.8, 1)
theme_override_colors/font_hover_color = Color(0.4, 1, 0.9, 1)
theme_override_font_sizes/font_size = 20
text = "üåê Âú®Á∫øÂØπÊàò"

[node name="BattleButton" type="Button" parent="Background/MainContainer/ContentArea/MenuButtonsArea/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.6, 0.6, 1)
theme_override_colors/font_hover_color = Color(1, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "ÊàòÊñóÊµãËØï"

[node name="CardShowcaseButton" type="Button" parent="Background/MainContainer/ContentArea/MenuButtonsArea/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.6, 0.8, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Âç°ÁâåÂ±ïÁ§∫"

[node name="SettingsButton" type="Button" parent="Background/MainContainer/ContentArea/MenuButtonsArea/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.6, 0.8, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "ËÆæÁΩÆ"

[node name="ExitButton" type="Button" parent="Background/MainContainer/ContentArea/MenuButtonsArea/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.4, 0.4, 1)
theme_override_colors/font_hover_color = Color(1, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = "ÈÄÄÂá∫Ê∏∏Êàè"
