extends Control

## Honor Of Kings ä¸»èœå• - è‡ªé€‚åº”å¸ƒå±€ç‰ˆæœ¬
## æ”¯æŒå¤šç§åˆ†è¾¨ç‡å’Œè®¾å¤‡çš„è‡ªé€‚åº”å¸ƒå±€

# èŠ‚ç‚¹å¼•ç”¨
var card_preview_container: Control
var start_game_button: Button
var battle_button: Button
var card_showcase_button: Button
var settings_button: Button
var exit_button: Button
var background_image: TextureRect
var main_container: Control
var content_area: Control
var menu_buttons_area: Control
var music_player: Panel  # éŸ³ä¹æ’­æ”¾å™¨å¼•ç”¨

# å¸ƒå±€å‚æ•°
var base_resolution := Vector2(1280, 720)  # åŸºå‡†åˆ†è¾¨ç‡
var min_button_size := Vector2(200, 50)     # æœ€å°æŒ‰é’®å°ºå¯¸
var max_button_size := Vector2(300, 80)     # æœ€å¤§æŒ‰é’®å°ºå¯¸
var current_scale_factor: float = 1.0       # å½“å‰ç¼©æ”¾å› å­

## å¡ç‰Œè½®æ’­ç›¸å…³
var available_cards: Array = []
var current_card_index: int = 0
var current_card_ui: CardUI
var carousel_timer: Timer

func _ready():
	print("Honor Of Kings - è‡ªé€‚åº”å¸ƒå±€ç‰ˆæœ¬å¯åŠ¨...")
	
	# è®¾ç½®ä¸ºå…¨å±å¸ƒå±€
	set_anchors_and_offsets_preset(Control.PRESET_FULL_RECT)
	
	# ç›‘å¬çª—å£å¤§å°å˜åŒ–
	get_viewport().size_changed.connect(_on_viewport_size_changed)
	
	# åˆå§‹åŒ–å¸ƒå±€
	call_deferred("initialize_adaptive_layout")
	
	# è·å–èŠ‚ç‚¹å¼•ç”¨
	call_deferred("get_node_references")

## åŠ¨æ€åŠ è½½èƒŒæ™¯å›¾ç‰‡
func load_background_image():
	print("å°è¯•åŠ è½½èƒŒæ™¯å›¾ç‰‡...")
	
	if not background_image:
		print("é”™è¯¯: èƒŒæ™¯å›¾ç‰‡èŠ‚ç‚¹æœªæ‰¾åˆ°")
		return
	
	# æ£€æŸ¥èµ„æºæ˜¯å¦å­˜åœ¨
	if ResourceLoader.exists("res://assets/images/backgrounds/background.png"):
		print("èƒŒæ™¯å›¾ç‰‡æ–‡ä»¶å­˜åœ¨ï¼Œå¼€å§‹åŠ è½½...")
		var image_resource = load("res://assets/images/backgrounds/background.png")
		if image_resource:
			background_image.texture = image_resource
			print("èƒŒæ™¯å›¾ç‰‡åŠ è½½æˆåŠŸ")
		else:
			print("è­¦å‘Š: èƒŒæ™¯å›¾ç‰‡åŠ è½½å¤±è´¥")
	else:
		print("è­¦å‘Š: èƒŒæ™¯å›¾ç‰‡æ–‡ä»¶ä¸å­˜åœ¨")

## è·å–èŠ‚ç‚¹å¼•ç”¨
func get_node_references():
	print("è·å–èŠ‚ç‚¹å¼•ç”¨...")
	
	# å®‰å…¨è·å–èŠ‚ç‚¹å¼•ç”¨
	card_preview_container = get_node_or_null("Background/MainContainer/ContentArea/CardPreviewArea")
	start_game_button = get_node_or_null("Background/MainContainer/ContentArea/MenuButtonsArea/MenuButtons/StartGameButton")
	battle_button = get_node_or_null("Background/MainContainer/ContentArea/MenuButtonsArea/MenuButtons/BattleButton")
	card_showcase_button = get_node_or_null("Background/MainContainer/ContentArea/MenuButtonsArea/MenuButtons/CardShowcaseButton")
	settings_button = get_node_or_null("Background/MainContainer/ContentArea/MenuButtonsArea/MenuButtons/SettingsButton")
	exit_button = get_node_or_null("Background/MainContainer/ContentArea/MenuButtonsArea/MenuButtons/ExitButton")
	background_image = get_node_or_null("Background")
	music_player = get_node_or_null("Background/MusicPlayer")  # è·å–éŸ³ä¹æ’­æ”¾å™¨å¼•ç”¨
	
	print("èŠ‚ç‚¹å¼•ç”¨è·å–æˆåŠŸ")
	
	# åŠ¨æ€åŠ è½½èƒŒæ™¯å›¾ç‰‡
	call_deferred("load_background_image")
	
	# ç»§ç»­åˆå§‹åŒ–
	call_deferred("setup_main_menu")

## è®¾ç½®ä¸»èœå•
func setup_main_menu():
	print("è®¾ç½®ä¸»èœå•...")
	
	# æ£€æŸ¥CardDatabase
	if not CardDatabase:
		print("é”™è¯¯: CardDatabaseæœªåŠ è½½")
		return
	
	# è·å–å¯ç”¨å¡ç‰Œ
	available_cards = CardDatabase.get_all_card_ids()
	print("æ‰¾åˆ° %d å¼ å¡ç‰Œå¯ä¾›è½®æ’­" % available_cards.size())
	
	# è®¾ç½®æŒ‰é’®è¿æ¥
	setup_button_connections()
	
	# æ’­æ”¾èƒŒæ™¯éŸ³ä¹
	play_background_music()
	
	# è®¾ç½®å¡ç‰Œè½®æ’­
	if available_cards.size() > 0:
		call_deferred("setup_card_carousel")
	
	print("ä¸»èœå•è®¾ç½®å®Œæˆ")

## è®¾ç½®æŒ‰é’®è¿æ¥
func setup_button_connections():
	if start_game_button:
		start_game_button.pressed.connect(_on_start_game_pressed)
		print("å¼€å§‹æ¸¸æˆæŒ‰é’®å·²è¿æ¥")
	
	if battle_button:
		battle_button.pressed.connect(_on_battle_pressed)
		print("æˆ˜æ–—æŒ‰é’®å·²è¿æ¥")
	
	if card_showcase_button:
		card_showcase_button.pressed.connect(_on_card_showcase_pressed)
		print("å¡ç‰Œå±•ç¤ºæŒ‰é’®å·²è¿æ¥")
	
	if settings_button:
		settings_button.pressed.connect(_on_settings_pressed)
		print("è®¾ç½®æŒ‰é’®å·²è¿æ¥")
	
	if exit_button:
		exit_button.pressed.connect(_on_exit_game_pressed)
		print("é€€å‡ºæŒ‰é’®å·²è¿æ¥")

## æ’­æ”¾èƒŒæ™¯éŸ³ä¹
func play_background_music():
	print("ğŸ”‡ æµ‹è¯•æ¨¡å¼ï¼šè·³è¿‡ä¸»èœå•èƒŒæ™¯éŸ³ä¹")
	# æµ‹è¯•é˜¶æ®µå…³é—­éŸ³ä¹
	# MusicManager.play_music("res://assets/music/bgm.mp3")

## æŒ‰é’®äº‹ä»¶å¤„ç†
func _on_start_game_pressed():
	print("è¿›å…¥åœ¨çº¿å¯¹æˆ˜")
	get_tree().change_scene_to_file("res://scenes/modes/OnlineMatch.tscn")

func _on_battle_pressed():
	print("è¿›å…¥æˆ˜æ–—æ¨¡å¼é€‰æ‹©")
	get_tree().change_scene_to_file("res://scenes/modes/BattleModeSelection.tscn")

func _on_online_battle_pressed():
	print("è¿›å…¥åœ¨çº¿å¯¹æˆ˜")
	get_tree().change_scene_to_file("res://scenes/modes/OnlineMatch.tscn")

func _on_card_showcase_pressed():
	print("åˆ‡æ¢åˆ°å¡ç‰Œå±•ç¤ºåœºæ™¯")
	get_tree().change_scene_to_file("res://scenes/modes/CardShowcase.tscn")

func _on_settings_pressed():
	print("æ‰“å¼€è®¾ç½®ç•Œé¢")
	get_tree().change_scene_to_file("res://scenes/main/SettingsMenu.tscn")

func _on_exit_game_pressed():
	print("é€€å‡ºæ¸¸æˆ")
	get_tree().quit()

## å¤„ç†é”®ç›˜è¾“å…¥
func _unhandled_input(event):
	if event is InputEventKey and event.pressed:
		match event.keycode:
			KEY_ESCAPE:
				_on_exit_game_pressed()
			KEY_ENTER:
				_on_start_game_pressed()

## è®¾ç½®å¡ç‰Œè½®æ’­
func setup_card_carousel():
	print("è®¾ç½®å¡ç‰Œè½®æ’­...")
	
	if not card_preview_container:
		print("é”™è¯¯: å¡ç‰Œé¢„è§ˆå®¹å™¨ä¸å­˜åœ¨")
		return
		
	if available_cards.is_empty():
		print("è­¦å‘Š: æ²¡æœ‰å¯ç”¨å¡ç‰Œ")
		return
	
	# åˆ›å»ºè®¡æ—¶å™¨ç”¨äºè‡ªåŠ¨è½®æ’­
	carousel_timer = Timer.new()
	carousel_timer.wait_time = 3.0  # 3ç§’åˆ‡æ¢ä¸€æ¬¡
	carousel_timer.timeout.connect(_on_carousel_timer_timeout)
	carousel_timer.autostart = true
	add_child(carousel_timer)
	
	# æ˜¾ç¤ºç¬¬ä¸€å¼ å¡ç‰Œ
	show_card_at_index(0)
	print("å¡ç‰Œè½®æ’­è®¾ç½®å®Œæˆ")

## æ˜¾ç¤ºæŒ‡å®šç´¢å¼•çš„å¡ç‰Œ
func show_card_at_index(index: int):
	if index < 0 or index >= available_cards.size():
		return
	
	# æ¸…ç†ä¹‹å‰çš„å¡ç‰Œ
	if current_card_ui:
		current_card_ui.queue_free()
		current_card_ui = null
	
	# è·å–å¡ç‰Œæ•°æ®
	var card_id = available_cards[index]
	var card_data = CardDatabase.get_card(card_id)
	
	if not card_data:
		print("é”™è¯¯: æ— æ³•è·å–å¡ç‰Œæ•°æ® %s" % card_id)
		return
	
	# å®‰å…¨åŠ è½½å¡ç‰ŒUI
	if ResourceLoader.exists("res://scenes/ui/CardUI.tscn"):
		var card_ui_scene = load("res://scenes/ui/CardUI.tscn")
		if card_ui_scene:
			current_card_ui = card_ui_scene.instantiate()
			card_preview_container.add_child(current_card_ui)
			
			# è®¾ç½®å¡ç‰Œæ•°æ®
			current_card_ui.set_card(card_data)
			current_card_ui.set_interactive(true)
			
			# ç­‰å¾…ä¸‹ä¸€å¸§å†è®¾ç½®ä½ç½®
			call_deferred("_position_card_ui")
			
			# æ›´æ–°å½“å‰ç´¢å¼•
			current_card_index = index
			
			print("è½®æ’­æ˜¾ç¤ºå¡ç‰Œ: %s" % card_data.card_name)
		else:
			print("é”™è¯¯: å¡ç‰ŒUIåœºæ™¯åŠ è½½å¤±è´¥")
	else:
		print("é”™è¯¯: å¡ç‰ŒUIåœºæ™¯æ–‡ä»¶ä¸å­˜åœ¨")

## è½®æ’­è®¡æ—¶å™¨å›è°ƒ
func _on_carousel_timer_timeout():
	var next_index = (current_card_index + 1) % available_cards.size()
	show_card_at_index(next_index)

## å®šä½å¡ç‰ŒUIçš„è¾…åŠ©å‡½æ•°
func _position_card_ui():
	if not current_card_ui or not card_preview_container:
		return
		
	# ç­‰å¾…å®¹å™¨å‡†å¤‡å¥½
	if card_preview_container.size == Vector2.ZERO:
		call_deferred("_position_card_ui")
		return
		
	# è®¾ç½®å¡ç‰Œä½ç½®å’Œå°ºå¯¸ï¼ˆé€‚åˆé¢„è§ˆçš„å°ºå¯¸ï¼‰
	current_card_ui.scale = Vector2(1.2, 1.2)  # ç¨å¾®æ”¾å¤§ä¸€ç‚¹ç”¨äºå±•ç¤º
	current_card_ui.position = Vector2(
		(card_preview_container.size.x - 150 * 1.2) / 2,
		(card_preview_container.size.y - 230 * 1.2) / 2
	)

## åˆå§‹åŒ–è‡ªé€‚åº”å¸ƒå±€
func initialize_adaptive_layout():
	print("åˆå§‹åŒ–è‡ªé€‚åº”å¸ƒå±€...")
	
	# è®¡ç®—å½“å‰ç¼©æ”¾å› å­
	calculate_scale_factor()
	
	# åº”ç”¨è‡ªé€‚åº”å¸ƒå±€
	apply_adaptive_layout()

func calculate_scale_factor():
	var viewport_size = get_viewport().get_visible_rect().size
	var scale_x = viewport_size.x / base_resolution.x
	var scale_y = viewport_size.y / base_resolution.y
	
	# ä½¿ç”¨è¾ƒå°çš„ç¼©æ”¾å› å­ä»¥ä¿æŒå°ºå¯¸æ¯”ä¾‹
	current_scale_factor = min(scale_x, scale_y)
	# é™åˆ¶ç¼©æ”¾èŒƒå›´ï¼Œé¿å…è¿‡å°æˆ–è¿‡å¤§
	current_scale_factor = clamp(current_scale_factor, 0.5, 2.0)
	
	print("çª—å£å°ºå¯¸: %s, ç¼©æ”¾å› å­: %.2f" % [viewport_size, current_scale_factor])

func apply_adaptive_layout():
	print("åº”ç”¨è‡ªé€‚åº”å¸ƒå±€...")
	
	# ç­‰å¾…èŠ‚ç‚¹å°±ç»ª
	await get_tree().process_frame
	
	# æ›´æ–°æŒ‰é’®å°ºå¯¸
	update_button_sizes()
	
	# æ›´æ–°å­—ä½“å°ºå¯¸
	update_font_sizes()
	
	# æ›´æ–°é—´è·å’Œå¤–è¾¹è·
	update_spacing_and_margins()

func update_button_sizes():
	var buttons = [start_game_button, battle_button, card_showcase_button, settings_button, exit_button]
	
	for button in buttons:
		if not button:
			continue
		
		# è®¡ç®—æ–°çš„æŒ‰é’®å°ºå¯¸
		var new_size = min_button_size * current_scale_factor
		new_size = Vector2(
			clamp(new_size.x, min_button_size.x, max_button_size.x),
			clamp(new_size.y, min_button_size.y, max_button_size.y)
		)
		
		# åº”ç”¨æ–°å°ºå¯¸
		button.custom_minimum_size = new_size

func update_font_sizes():
	# è®¡ç®—è‡ªé€‚åº”å­—ä½“å°ºå¯¸
	var base_font_size = 16
	var scaled_font_size = int(base_font_size * current_scale_factor)
	scaled_font_size = clamp(scaled_font_size, 12, 24)
	
	# æ›´æ–°æŒ‰é’®å­—ä½“
	var buttons = [start_game_button, battle_button, card_showcase_button, settings_button, exit_button]
	for button in buttons:
		if button:
			button.add_theme_font_size_override("font_size", scaled_font_size)

func update_spacing_and_margins():
	# è·å–ä¸»å®¹å™¨
	main_container = get_node_or_null("Background/MainContainer")
	content_area = get_node_or_null("Background/MainContainer/ContentArea")
	menu_buttons_area = get_node_or_null("Background/MainContainer/ContentArea/MenuButtonsArea")
	
	if main_container:
		# è®¡ç®—è‡ªé€‚åº”é—´è·
		var base_margin = 20
		var scaled_margin = int(base_margin * current_scale_factor)
		scaled_margin = clamp(scaled_margin, 10, 40)
		
		# æ›´æ–°å¤–è¾¹è·
		if main_container is MarginContainer:
			main_container.add_theme_constant_override("margin_left", scaled_margin)
			main_container.add_theme_constant_override("margin_right", scaled_margin)
			main_container.add_theme_constant_override("margin_top", scaled_margin)
			main_container.add_theme_constant_override("margin_bottom", scaled_margin)
	
	if menu_buttons_area:
		# æ›´æ–°æŒ‰é’®é—´è·
		var base_separation = 15
		var scaled_separation = int(base_separation * current_scale_factor)
		scaled_separation = clamp(scaled_separation, 8, 30)
		
		if menu_buttons_area is VBoxContainer:
			menu_buttons_area.add_theme_constant_override("separation", scaled_separation)

## çª—å£å¤§å°å˜åŒ–äº‹ä»¶å¤„ç†
func _on_viewport_size_changed():
	print("çª—å£å¤§å°å‘ç”Ÿå˜åŒ–")
	
	# é‡æ–°è®¡ç®—å’Œåº”ç”¨å¸ƒå±€
	calculate_scale_factor()
	apply_adaptive_layout()
